Bring over padus specific functionality/info

--- a/index.less
+++ b/index.less
@@ -24,6 +24,7 @@
 @import "npm://terriajs/lib/Styles/ToolsPanel.less";
 @import "npm://terriajs/lib/Styles/NowViewingAttentionGrabber.less";
 @import "npm://terriajs/lib/Styles/MapProgressBar.less";
+@import "npm://terriajs/lib/Styles/ScienceBaseInfo.less";
 
 // Tabs on the Explorer Panel
 @import "npm://terriajs/lib/Styles/DataCatalogTab.less";
